# GameOfLifeMultithreaded

./: CMakeLists.txt
source/: main.cpp
source/App/: App.cpp  App.hpp  Camera.cpp  Camera.hpp  ControllableCamera.cpp
source/GOL/: GOL.cpp  GOL.hpp  GOLGrid.cpp  GOLGrid.hpp  ThreadPool.cpp  ThreadPool.hpp
source/GOL/Rules/: GOLNormal.cpp  GOLNormal.hpp
